# rust-os-tutorial

./: .gitignore  Cargo.toml  Part 0.md  README.md  flake.nix  random_u64.sh  rust-toolchain.toml
.cargo/: config.toml
Part 0/: README.md
Part 0 - Limine/: README.md
Part 00 - Limine/: README.md
Part 01 - Kernel/: README.md
Part 02 - Debugging in Vscodium/: README.md
Part 04 - Drawing to the Screen/: README.md  Screen_Recording.webm  Screen_Recording_Faster.webm
Part 04 - Logger/: README.md
Part 05 - Multiple CPUs/: README.md
Part 05 - Running on Real Hardware/: README.md
Part 06 - Logging/: README.md
Part 06 - Managing Memory/: README.md
Part 07 - CPU Local Data/: README.md
Part 07 - Multiple CPUs/: README.md
Part 08 - Breakpoint Handling/: README.md
Part 08 - Global Allocator/: README.md
Part 08 - Managing Memory/: README.md
Part 09 - CPU Local Data/: README.md
Part 1/: README.md
Part 10 - Breakpoint Handling/: README.md
Part 10 - Parsing ACPI Tables/: README.md
Part 11 - Page Fault Handling/: README.md
Part 12 - Parsing ACPI Tables/: README.md
Part 13 - Serial Port on Chromebooks/: README.md
Part 14 - Local APIC/: README.md
Part 15 - Sending IPIs/: README.md
Part 16 - User Mode/: README.md
Part 17 - System Calls/: README.md
Part 18 - Syscall ABI/: README.md
Part 2 - Debugging in Vscodium/: README.md
Part 3/: README.md
Part 4/: README.md
Part 5/: README.md
Part 6/: README.md
Part 8 - Breakpoint Handling/: README.md
Part 9/: README.md
common/: Cargo.toml
common/src/: frame_buffer_embedded_graphics.rs  frame_buffer_info.rs  lib.rs  slice_data.rs  syscall.rs  syscall_alloc.rs  syscall_alloc_2.rs  syscall_exists.rs  syscall_exit.rs  syscall_frame_buffer.rs  syscall_keyboard.rs  syscall_log.rs  syscall_mem_info.rs  syscall_mouse.rs  syscall_read_event_stream.rs  syscall_wait_until_event.rs
kernel/: Cargo.toml  linker-x86_64.ld
kernel/src/: acpi.rs  boxed_stack.rs  cpu_local_data.rs  cut_range.rs  e.rs  elf_flags_to_page_table_flags.rs  elf_segment_flags.rs  enter_user_mode.rs  find_unused_virtual_range.rs  frame_buffer_embedded_graphics.rs  gdt.rs  get_page_table.rs  global_allocator.rs  hhdm_offset.rs  idt.rs  init_ps2_mouse.rs  initial_frame_allocator.rs  initial_usable_frames_iterator.rs  interrupt_vector.rs  interrupted_context.rs  io_apics.rs  limine_requests.rs  local_apic.rs  logger.rs  main.rs  memory.rs  mouse.rs  nmi_handler_states.rs  page_tables_traverser.rs  panic_handler.rs  physical_memory.rs  pic8259_interrupts.rs  ps2_interrupt_handler.rs  run_user_mode_program.rs  spcr.rs  stack_sizes_iterator.rs  syscall_handlers.rs  syscall_saved_regs.rs  syscalls.rs  task.rs  (+3 more)
kernel/src/idt/: keyboard_interrupt_handler.rs  mouse_interrupt_handler.rs  page_fault_handler.rs
kernel/src/memory/: physical_memory.rs  virtual_memory.rs
kernel/src/syscall_handlers/: exists.rs  exit.rs  frame_buffer.rs  keyboard.rs  log.rs  mem_info.rs  mouse.rs  read_event_stream.rs  syscall_alloc.rs  syscall_alloc_2.rs  wait_until_event.rs
runner/: Cargo.toml  build.rs  limine.conf
runner/src/: main.rs
user_mode_program/: Cargo.toml  build.rs
user_mode_program/src/: async_keyboard.rs  async_mouse.rs  execute_future.rs  executor_context.rs  frame_buffer.rs  global_allocator.rs  logger.rs  main.rs  panic_handler.rs  syscalls.rs
