[package]
name = "common"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
bincode = { version = "2.0.1", default-features = false, features = ["derive"] }
embedded-graphics = "0.8.1"
limine = { version = "0.5.0", optional = true }
log = { git = "https://github.com/ChocolateLoverRaj/log", branch = "bincode", version = "0.4.27", features = [
    "bincode",
] }
thiserror = { version = "2.0.12", default-features = false }
zerocopy = "0.8.25"

[features]
user_mode = []
kernel = ["dep:limine"]
default = ["user_mode", "kernel"]
