[package]
name = "kernel"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
acpi = "5.2.0"
atomic_enum = "0.3.0"
bitflags = "2.9.1"
common = { version = "0.1.0", path = "../common", default-features = false, features = [
    "kernel",
] }
console = { version = "0.15.11", git = "https://github.com/ChocolateLoverRaj/console", branch = "no_std", default-features = false, features = [
    "alloc",
    "ansi-parsing",
] }
crossbeam-queue = { version = "0.3.12", default-features = false, features = [
    "alloc",
] }
elf = { version = "0.8.0", default-features = false }
embedded-graphics = "0.8.1"
force-send-sync = { git = "https://github.com/ChocolateLoverRaj/force-send-sync", branch = "no_std", version = "1.1.0" }
limine = "0.5"
log = { git = "https://github.com/ChocolateLoverRaj/log", branch = "bincode", version = "0.4.27", features = [
    "bincode",
] }
nodit = "0.9.2"
num_enum = { version = "0.7.3", default-features = false }
owo-colors = "4.2.1"
ps2 = "0.2.0"
ps2-mouse = { git = "https://github.com/ChocolateLoverRaj/ps2-mouse", branch = "minimal" }
raw-cpuid = "11.5.0"
spin = "0.10.0"
talc = "4.4.2"
thiserror = { version = "2.0.12", default-features = false }
uart = { git = "https://github.com/ChocolateLoverRaj/uart", branch = "send-sync" }
uart_16550 = "0.3.2"
unicode-segmentation = "1.12.0"
x2apic = { git = "https://github.com/ChocolateLoverRaj/x2apic-rs", branch = "main" }
x86_64 = "0.15.2"

[[bin]]
name = "kernel"
test = false
bench = false
