[package]
name = "user_mode_program"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "user_mode_program"
test = false
bench = false

[dependencies]
common = { version = "0.1.0", path = "../common", default-features = false, features = [
    "user_mode",
] }
futures = { version = "0.3.31", default-features = false }
heapless = "0.8.0"
spin = "0.10.0"
talc = { version = "4.4.2", features = ["counters"] }
x86_64 = "0.15.2"
